# dotbrave

./: CLAUDE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-10-settings-export.md  2026-07-10-two-command-cli.md
docs/superpowers/specs/: 2026-07-10-settings-export-design.md  2026-07-10-two-command-cli-design.md
examples/: all.toml  pwa.toml  settings.toml  shortcuts.toml
scripts/: generate_brave_command_ids.py
src/dotbrave/: __main__.py  browser.py  cli.py  live.py  pwa.py  settings.py  shortcuts.py  utils.py
src/dotbrave/_base/: cdp.py  live_apply.py  orchestrator.py  process.py  pwa.py  settings.py  utils.py
tests/: conftest.py  test_apply_live.py  test_brave_channel.py  test_brave_live.py  test_cdp.py  test_error_messages.py  test_export.py  test_help.py  test_init.py  test_live_apply.py  test_logic.py  test_macos_pwa_daemon.py  test_platform.py  test_profile_scope.py  test_pwa_apply.py  test_restore.py  test_settings_apply.py  test_settings_snapshot.py  test_smoke.py  test_unified_apply.py  test_url_config.py  test_windows_session.py
